--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "minishell.h": "c",
-        "functional": "c"
+        "functional": "c",
+        "execute.h": "c"
     }
 }
